--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 html, body {
+    
     margin: 5px;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
@@ -21,6 +22,11 @@ html, body {
 
 }
 
+h1{
+    font-size: 2rem;
+    color: var(--Blanco-Numeros);
+    text-align: center;
+}
 button {
     all: unset;
     border: .5px;
@@ -34,6 +40,7 @@ button {
 
 
 #Calculadora{
+    padding-bottom: 30px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: auto auto auto auto auto;
@@ -110,6 +117,24 @@ button {
 #AC {
     color: var(--Naranja-Ac);
 }
+
+.verde {
+    color: green;
+}
+
+footer {
+    font-size: .5rem;
+    width: 100%;
+    background-color: var(--Gris-fondo-Operadores);
+    text-align: center;
+    color: var(--Verde-Operadores);
+}
+
+
+
+
+
+
 
 
 
